--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,64 @@ h2 {
   }
 }
 
+.header {
+  padding: 16px;
+  background: url("public/image/header.png") no-repeat center / cover;
+  @media screen and (min-width: 1024px) {
+    padding: 16px 64px;
+  }
+  header {
+    display: flex;
+    align-items: center;
+  }
+  &__logo {
+    margin-right: auto;
+  }
+  h2 {
+    margin-top: 40px;
+    color: white;
+    @media screen and (min-width: 1024px) {
+      max-width: 1000px;
+      margin: 24px auto 0;
+    }
+  }
+  &__title {
+    margin-top: 24px;
+    @extend .inter-regular;
+    font-size: 20px;
+    text-align: center;
+    color: white;
+    @media screen and (min-width: 1024px) {
+      max-width: 1000px;
+      margin: 24px auto 0;
+    }
+  }
+  &__btn {
+    display: flex;
+    justify-content: center;
+    margin: 32px 0;
+    button {
+      width: 100%;
+      @media screen and (min-width: 1024px) {
+        max-width: 200px;
+      }
+    }
+  }
+  &__icons {
+    display: flex;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    gap: 20px;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    @media screen and (min-width: 1024px) {
+      justify-content: space-between;
+    }
+  }
+}
+
 .small-cards-block {
   padding: 60px 16px;
   background: rgba(238, 238, 238, 1);
@@ -64,39 +122,7 @@ h2 {
   }
 }
 
-.big-cards-block {
-  padding: 60px 16px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  @media screen and (min-width: 1024px) {
-    padding: 120px 64px 0;
-  }
-}
-.big-cards {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 16px;
-  @media screen and (min-width: 1024px) {
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 32px;
-  }
-  > * {
-    margin-top: 16px
-  }
-  > *:nth-child(2) {
-    background: url("/image/big_card_2.png") no-repeat center / cover;
-  }
-  > *:nth-child(3) {
-    background: url("/image/big_card_3.png") no-repeat center / cover;
-  }
-}
 
-.generate {
-  padding: 60px 16px;
-  @media screen and (min-width: 1024px) {
-    padding: 120px 64px;
-  }
-}
+
+
+
